publishing messages to kstreams and fixing sonallint issues